# dot_compression_comparison

./: CMakeLists.txt  main.cpp
include/: compression_helper.hpp  directories.hpp.in  ieee_compression.hpp  ieee_compression_helper.hpp  pressio_compression_helper.hpp
lp_configs/: sz3_1e-01.json  sz3_1e-03.json  sz3_1e-05.json  sz3_1e-07.json  sz3_1e-08.json  sz3_1e-09.json  sz3_1e-10.json  sz3_1e-11.json  sz3_1e-12.json  sz3_1e-13.json  sz3_1e-14.json  sz3_1e-15.json  sz3_1e-16.json  zfp_1e-01.json  zfp_1e-03.json  zfp_1e-05.json  zfp_1e-07.json  zfp_1e-08.json  zfp_1e-09.json  zfp_1e-10.json  zfp_1e-11.json  zfp_1e-12.json  zfp_1e-13.json  zfp_1e-14.json  zfp_1e-15.json  zfp_1e-16.json  zfp_r32.json
results/: 2022-09-07_1700_rand_results.csv  2022-09-07_1700_sin_results.csv  plot_results.py
